# lapin-repro

./: Cargo.toml
src/: main.rs
tests/: test.rs
