[package]
name = "lapin-bug-repro"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-lite = "2.5.0"
lapin = "2.5.0"
tokio = { version = "1.42.0", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
] }
tokio-executor-trait = "2.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
